# fcitx5-js

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  eslint.config.mjs  install-deps.sh  package.json  playwright.config.ts  tsconfig.json  tsconfig.worker.json
.github/workflows/: ci.yml  compare.yml
cache/: README.md
chromepanel/: CMakeLists.txt  chromepanel.conf.in.in  chromepanel.cpp  chromepanel.h
page/: Fcitx5.d.ts  action.ts  caret.ts  cli.ts  client.ts  config.ts  constant.ts  context.ts  custom-phrase.ts  focus.ts  fs.ts  global.d.ts  index.ts  input-method.ts  keyboard.ts  keycode.ts  locale.ts  module.ts  non-dom.d.ts  notification.ts  plugin.ts  pre.js  pre.ts  primary-selection.ts  textarea-caret.d.ts  undoRedo.ts  unicode.ts  worker.ts  workerAPI.ts
patches/: fcitx5.patch
preview/: Fcitx5.data  Fcitx5.js  Fcitx5.wasm  Fcitx5.wasm.map  index.html
scripts/: build.mjs  format.sh  install-deps.sh  install.sh  lint.sh  postpack.sh  prepack.sh
src/: CMakeLists.txt  action.cpp  cli.cpp  config.cpp  customphrase.cpp  event_js.cpp  event_js.h  fcitx.cpp  fcitx.h  input_method.cpp  keycode.cpp  keycode.h  pthread.cpp
tests/: global.d.ts  test-caret.mobile.spec.ts  test-clipboard.spec.ts  test-focus.mobile.spec.ts  test-focus.spec.ts  test-generic.mobile.spec.ts  test-generic.spec.ts  test-idbfs.spec.ts  test-input-method.spec.ts  test-locale.spec.ts  test-preedit.spec.ts  test-simulate.mobile.spec.ts  test-undo.mobile.spec.ts  util.ts
wasmfrontend/: CMakeLists.txt  wasmfrontend.conf.in.in  wasmfrontend.cpp  wasmfrontend.h
wasmnotifications/: CMakeLists.txt  notifications.conf.in.in  notifications.cpp  notifications.h
webkeyboard/: CMakeLists.txt  webkeyboard.conf.in.in  webkeyboard.cpp  webkeyboard.h
webpanel/: CMakeLists.txt  webpanel.cpp  webpanel.h
